modificacion de rutas por error

--- a/Style/ResumStyle.css
+++ b/Style/ResumStyle.css
@@ -8,7 +8,10 @@
     text-decoration: none;
 }
 
-
+.h1exito{
+    color: brown;
+    display: flex;
+}
 /* fOOTER */
 .delFooter1{
     position: absolute;
