--- a/Style/ContactStyle.css
+++ b/Style/ContactStyle.css
@@ -201,7 +201,23 @@ header{
     z-index: 1;
 }
 
-
+.div{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    gap: 5rem;
+    box-shadow: 0px 6px 11px 5px rgba(0, 0, 0, 0.25);
+    background-image: linear-gradient(rgba(94, 52, 52, 0.55),rgba(94, 52, 52, 0.55)), url(https://i.ibb.co/1KZ0s8S/img-Presentacion.jpg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    text-shadow: 0 0 8px rgb(0, 0, 0,0.8);
+    font-size: 2.2rem;
+    color:var(--casiBlanco) ;
+    padding-top: 11.1rem;
+    padding-bottom: 9.3rem;
+    text-align:center ;
+}
 
 
 /* Media Querys */
